# Ark

./: .gitignore  Cargo.toml  README.md  build.gradle  build.rs  gradle.properties  settings.gradle
.github/workflows/: build.yml
crates/ark/: Cargo.toml
crates/ark-extension-api/: Cargo.toml
crates/ark-extension-api/src/: lib.rs
crates/ark-lod/: Cargo.toml
crates/ark-runtime/: Cargo.toml
crates/ark-runtime/src/: lib.rs  test.rs  vulkan.rs
crates/ark-runtime/src/extension/: binding.rs  mod.rs  package.rs  wasm.rs
crates/ark-runtime/src/extension/binding/: entry.rs
crates/ark-runtime/wit/: registry.wit
crates/ark-vk-binding/: Cargo.toml
crates/ark-vk-binding/src/: binding.rs  lib.rs  test.rs
crates/ark-vk-binding/src/binding/: buffer.rs  command.rs  descriptor.rs  image.rs  memory.rs  pipeline.rs  queue.rs  shader.rs  sync.rs
crates/ark-vk-binding/wit/: buffer.wit  command.wit  descriptor.wit  image.wit  memory.wit  pipeline.wit  queue.wit  shader.wit  sync.wit  vulkan.wit
crates/ark/src/: lib.rs
src/client/java/io/github/liyze09/ark/: Ark.java  NativeContext.java
src/client/java/io/github/liyze09/ark/exception/: FatalNativeException.java  NativeException.java  VulkanException.java
src/client/java/io/github/liyze09/ark/extension/: CompatibilityChecker.java  Extension.java  ExtensionLoader.java  ExtensionManifest.java
src/client/java/io/github/liyze09/ark/lod/: BinaryChunkSource.java  ChunkBatchManager.java  ServerLevelBinaryChunkSource.java
src/client/java/io/github/liyze09/ark/mixin/: GpuDeviceAccessor.java  IOWorkerAccessor.java  RegionFileStorageAccessor.java  SimpleRegionStorageAccessor.java  VulkanBackendMixin.java  VulkanPhysicalDeviceAccessor.java
src/client/java/io/github/liyze09/nexus/: NexusBackend.java  NexusClientMain.java
src/client/java/io/github/liyze09/nexus/chunk/: BuiltSection.java  NexusChunkBuilder.java  SparseBlock.java
src/client/java/io/github/liyze09/nexus/mixin/client/: MixinClientChunkCache.java
src/client/java/io/github/liyze09/nexus/model/block/: BakedBlock.java  ModelManager.java  VisibleFaces.java
src/client/java/io/github/liyze09/nexus/render/: NexusWorldRenderer.java
src/client/java/io/github/liyze09/nexus/utils/: LayeredBlockGetter.java
src/client/resources/: ark.client.mixins.json
src/main/resources/: ark.accesswidener  fabric.mod.json
src/native/: backend.rs  lib.rs  shaders.rs  terrain.rs  texture.rs  vulkan.rs
src/native/backend/: state.rs  transfer.rs
src/native/extension/: binding.rs  mod.rs  package.rs  wasm.rs
src/shaders/: common.slang  task.slang
tests/test-guest/: Cargo.toml
tests/test-guest/src/: lib.rs
wit/: core.wit
