[package]
name = "ark"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/native/lib.rs"

[dependencies]
vulkanalia = { version = "0.35.0", features = ["libloading", "provisional"] }
vulkanalia-vma = "0.9.0"
anyhow = "1.0.102"
rayon = "1.12.0"
mimalloc = "0.1.52"
zip = "8.6.0"
wasmtime-wasi = { version ="45.0.0", features = ["p1"] }
serde = { version = "1.0.220", features = ["derive"] }
serde_json = "1.0.150"
log = "0.4.29"
thiserror = "2.0.18"
parking_lot = "0.12.5"

[dependencies.wasmtime]
version = "45.0.0"
default-features = false
features = [
  'anyhow',
  'async',
  'backtrace',
  'cache',
  'profiling',
  'parallel-compilation',
  'component-model',
  'component-model-async',
  'cranelift',
  'pooling-allocator',
  'demangle',
  'addr2line',
  'coredump',
  'debug-builtins',
  'runtime',
  'threads',
  'stack-switching',
  'std',
  'debug',
  'compile-time-builtins',
]

[build-dependencies]
shaderc = "0.10.1"

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
opt-level = 3
overflow-checks = false
panic = "abort"
