[workspace]
members = ["crates/*"]
default-members = ["crates/ark"]
resolver = "3"

[workspace.dependencies]
vulkanalia = { version = "0.35.0", features = ["libloading", "provisional"] }
vulkanalia-vma = "0.9.0"
wasmtime-wasi = "45.0.0" 
anyhow = "1.0.102"
log = "0.4.30"
thiserror = "2.0.18"

[workspace.dependencies.wasmtime]
version = "45.0.0"
default-features = false
features = [
  'anyhow',
  'async',
  'backtrace',
  'cache',
  'profiling',
  'parallel-compilation',
  'component-model',
  'component-model-async',
  'cranelift',
  'pooling-allocator',
  'demangle',
  'addr2line',
  'coredump',
  'debug-builtins',
  'runtime',
  'threads',
  'stack-switching',
  'std',
  'debug',
  'compile-time-builtins',
]
