[package]
name = "ark-runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
ark-vk-binding = { path = "../ark-vk-binding" }
vulkanalia = { workspace = true }
vulkanalia-vma = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
zip = "8.6.0"
serde = { version = "1.0.220", features = ["derive"] }
serde_json = "1.0.150"
parking_lot = "0.12.5"
