[package]
name = "ark"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ark-vk-binding = { path = "../ark-vk-binding" }
vulkanalia = { workspace = true }
vulkanalia-vma = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
mimalloc = "0.1.52"
zip = "8.6.0"
serde = { version = "1.0.220", features = ["derive"] }
serde_json = "1.0.150"
parking_lot = "0.12.5"


[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
opt-level = 3
overflow-checks = false
panic = "abort"