[package]
name = "ark"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ark-runtime = { path = "../ark-runtime" }
vulkanalia = { workspace = true }
vulkanalia-vma = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
mimalloc = "0.1.52"
serde_json = "1.0.150"
parking_lot = "0.12.5"

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
opt-level = 3
overflow-checks = false
